<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_main_nav_graph"
    app:startDestination="@id/admin_home">

    <fragment
        android:id="@+id/admin_more"
        android:name="com.circleappsstudio.mimisa.ui.main.more.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" />
    <fragment
        android:id="@+id/profile_user"
        android:name="com.circleappsstudio.mimisa.ui.main.profileuser.ProfileUserFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_profile_user" />
    <fragment
        android:id="@+id/admin_intention"
        android:name="com.circleappsstudio.mimisa.ui.main.admin.intention.main.AdminIntentionFragment"
        android:label="@string/intention_register"
        tools:layout="@layout/fragment_admin_intention"/>
    <fragment
        android:id="@+id/admin_seat_reservation"
        android:name="com.circleappsstudio.mimisa.ui.main.admin.seatreservation.main.AdminSeatReservationFragment"
        android:label="@string/seat_reservation"
        tools:layout="@layout/fragment_admin_seat_reservation"/>
    <fragment
        android:id="@+id/admin_home"
        android:name="com.circleappsstudio.mimisa.ui.main.admin.home.AdminHomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_admin_home" />
    <fragment
        android:id="@+id/admin_options_seat_reservation"
        android:name="com.circleappsstudio.mimisa.ui.main.admin.seatreservation.options.OptionsAdminSeatReservationFragment"
        android:label="@string/options"
        tools:layout="@layout/fragment_options_admin_seat_reservation" />
    <fragment
        android:id="@+id/admin_options_intention_fragment"
        android:name="com.circleappsstudio.mimisa.ui.main.admin.intention.options.OptionsAdminIntentionFragment"
        android:label="@string/options"
        tools:layout="@layout/fragment_options_admin_intention" />
    <fragment
        android:id="@+id/admin_seat_category_fragment"
        android:name="com.circleappsstudio.mimisa.ui.main.seatreservation.seatcategory.SeatCategoryFragment"
        android:label="@string/seat_category"
        tools:layout="@layout/fragment_seat_category" />
    <fragment
        android:id="@+id/admin_all_seat_bubbles_fragment"
        android:name="com.circleappsstudio.mimisa.ui.main.seatreservation.seatcategory.bubble.AllSeatBubblesFragment"
        android:label="@string/bubbles"
        tools:layout="@layout/fragment_all_seat_bubbles" />
    <fragment
        android:id="@+id/admin_bubble_seat_category_fragment"
        android:name="com.circleappsstudio.mimisa.ui.main.seatreservation.seatcategory.bubble.BubbleSeatCategoryFragment"
        android:label="@string/to_reserve_bubble"
        tools:layout="@layout/fragment_bubble_seat_category" />
    <fragment
        android:id="@+id/admin_all_seat_couples_fragment"
        android:name="com.circleappsstudio.mimisa.ui.main.seatreservation.seatcategory.couple.AllSeatCouplesFragment"
        android:label="@string/couples"
        tools:layout="@layout/fragment_all_seat_couples" />
    <fragment
        android:id="@+id/admin_couple_seat_category_fragment"
        android:name="com.circleappsstudio.mimisa.ui.main.seatreservation.seatcategory.couple.CoupleSeatCategoryFragment"
        android:label="@string/to_reserve_couple"
        tools:layout="@layout/fragment_couple_seat_category" />
    <fragment
        android:id="@+id/admin_all_seat_threesomes_fragment"
        android:name="com.circleappsstudio.mimisa.ui.main.seatreservation.seatcategory.threesome.AllSeatThreesomesFragment"
        android:label="@string/threesomes"
        tools:layout="@layout/fragment_all_seat_threesomes" />
    <fragment
        android:id="@+id/admin_threesome_seat_category_fragment"
        android:name="com.circleappsstudio.mimisa.ui.main.seatreservation.seatcategory.threesome.ThreesomeSeatCategoryFragment"
        android:label="@string/to_reserve_threesome"
        tools:layout="@layout/fragment_threesome_seat_category" />
    <fragment
        android:id="@+id/admin_intention_fragment"
        android:name="com.circleappsstudio.mimisa.ui.main.intention.IntentionFragment"
        android:label="@string/intention_register"
        tools:layout="@layout/fragment_intention" />
</navigation>